2024-08-15 Konstantin Kushnir <chpock@gmail.com>
	* Add tdom

2024-08-12 Konstantin Kushnir <chpock@gmail.com>
	* Add Windows x86_64 platform

2024-08-11 Konstantin Kushnir <chpock@gmail.com>
	* Improve compiler optimization options
	* Improve startup and remove bootstrap code. Initialize interp only by
	environment variables.
	* Make installkit lauched without arguments (in interactive mode) to use
	standard tclsh/wish RC files.

2024-08-10 Konstantin Kushnir <chpock@gmail.com>
	* Remove packages and code related to compatibility
	* Add tkcon as a console and use it on all platforms
	* Enable threads for all platforms