@@ -1,3 +1,6 @@
+2024-08-17 Konstantin Kushnir <chpock@gmail.com>
+	* Add console binaries for Windows x86/x86_64 platforms
+
 2024-08-15 Konstantin Kushnir <chpock@gmail.com>
 	* Add tdom
 
